bug fix and spacing for project box

--- a/app/assets/stylesheets/pages/projects/show/_project.scss
+++ b/app/assets/stylesheets/pages/projects/show/_project.scss
@@ -1,4 +1,6 @@
 #project-details-container {
+  @include standard-border;
+  @include medium-padding;
   
   // Bootstrap container
   & > div {
